[package]
name = "totoro"
version = "0.1.0"
edition = "2021"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
description = "Manage totp auth for each domain in the command line"
keywords = ["totp", "auth"]
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clipboard-rs = "0.2.2"
directories = "6.0.0"
toml = "0.8.19"
anyhow = "1.0.95"
google-authenticator = "=0.4.2"
